[package]
name = "heart-rate-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
nokhwa = { version = "0.10.4", features = ["input-native"] }
opencv = { version = "0.84.2", default-features = false, features = ["imgproc", "highgui", "clang-runtime", "objdetect"] }
ruststft = "0.3.1"

[profile.dev.package."*"]
opt-level = 3
